--- a/final/SignIn.xib
+++ b/final/SignIn.xib
@@ -21,6 +21,7 @@
                 <outlet property="pwLbl" destination="Ayo-Vw-gMx" id="Wf0-sd-0pN"/>
                 <outlet property="pwTxt" destination="tJk-Zz-7MW" id="gCm-UJ-HVf"/>
                 <outlet property="rgstrBtn" destination="L40-pd-d6c" id="EZd-l1-i4D"/>
+                <outlet property="signInTitle" destination="NwW-0d-WHZ" id="WaS-Mu-EOb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,52 +30,64 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSC-6c-MuR">
-                    <rect key="frame" x="16" y="60" width="343" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="16" y="96.5" width="343" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CTL-1R-cDE">
-                    <rect key="frame" x="16" y="89" width="343" height="30"/>
+                    <rect key="frame" x="16" y="122.5" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayo-Vw-gMx">
-                    <rect key="frame" x="16" y="139" width="343" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="16" y="172.5" width="343" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tJk-Zz-7MW">
-                    <rect key="frame" x="16" y="168" width="343" height="30"/>
+                    <rect key="frame" x="16" y="198.5" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYs-ax-sBi">
-                    <rect key="frame" x="16" y="218" width="343" height="30"/>
+                    <rect key="frame" x="16" y="248.5" width="343" height="33"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" title="Login"/>
                     <connections>
                         <action selector="loginBtn:" destination="-1" eventType="touchUpInside" id="oD0-Cz-QYc"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not registered yet?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnM-WZ-Mk4">
-                    <rect key="frame" x="16" y="269" width="343" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="16" y="305.5" width="343" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L40-pd-d6c">
-                    <rect key="frame" x="16" y="298" width="343" height="30"/>
+                    <rect key="frame" x="16" y="331.5" width="343" height="33"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                     <state key="normal" title="Register"/>
                     <connections>
                         <action selector="rgstrBtn:" destination="-1" eventType="touchUpInside" id="e56-7b-n8E"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKQ-yt-JFN">
-                    <rect key="frame" x="16" y="203" width="343" height="0.0"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="16" y="372.5" width="343" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NwW-0d-WHZ">
+                    <rect key="frame" x="16" y="50" width="343" height="26.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -84,6 +97,7 @@
                 <constraint firstItem="tJk-Zz-7MW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="2L3-Rt-IPu"/>
                 <constraint firstItem="CTL-1R-cDE" firstAttribute="top" secondItem="zSC-6c-MuR" secondAttribute="bottom" constant="8" id="6Qp-zH-min"/>
                 <constraint firstItem="CTL-1R-cDE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="8pJ-Y8-nvx"/>
+                <constraint firstItem="zSC-6c-MuR" firstAttribute="top" secondItem="NwW-0d-WHZ" secondAttribute="bottom" constant="20" id="AiM-Vt-MAb"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="L40-pd-d6c" secondAttribute="trailing" constant="16" id="B8N-Hn-6UV"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="uKQ-yt-JFN" secondAttribute="trailing" constant="16" id="C7j-l6-EiQ"/>
                 <constraint firstItem="L40-pd-d6c" firstAttribute="top" secondItem="aYs-ax-sBi" secondAttribute="bottom" constant="50" id="DRU-Ki-SBx"/>
@@ -91,6 +105,7 @@
                 <constraint firstItem="aYs-ax-sBi" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="MLr-jI-AD5"/>
                 <constraint firstItem="gnM-WZ-Mk4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="MeK-ku-CMG"/>
                 <constraint firstItem="aYs-ax-sBi" firstAttribute="top" secondItem="tJk-Zz-7MW" secondAttribute="bottom" constant="20" id="NLI-wU-Stc"/>
+                <constraint firstItem="NwW-0d-WHZ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="30" id="NNe-8t-WGw"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="CTL-1R-cDE" secondAttribute="trailing" constant="16" id="Rll-IA-w59"/>
                 <constraint firstItem="aYs-ax-sBi" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="Svr-Ah-ZgG"/>
                 <constraint firstItem="Ayo-Vw-gMx" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="UQG-fi-qzj"/>
@@ -98,15 +113,16 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ayo-Vw-gMx" secondAttribute="trailing" constant="16" id="V3t-Tl-pt4"/>
                 <constraint firstItem="Ayo-Vw-gMx" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="VCy-my-r0D"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="gnM-WZ-Mk4" secondAttribute="trailing" constant="16" id="WeS-WD-OF0"/>
-                <constraint firstItem="zSC-6c-MuR" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="40" id="ZLj-yN-5Zc"/>
+                <constraint firstItem="uKQ-yt-JFN" firstAttribute="top" secondItem="L40-pd-d6c" secondAttribute="bottom" constant="8" id="Xgv-Ub-Y6D"/>
                 <constraint firstItem="L40-pd-d6c" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="a8o-i6-Ugl"/>
-                <constraint firstItem="uKQ-yt-JFN" firstAttribute="top" secondItem="tJk-Zz-7MW" secondAttribute="bottom" constant="5" id="eJC-EV-hDj"/>
                 <constraint firstItem="L40-pd-d6c" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="fQk-jl-DE3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="aYs-ax-sBi" secondAttribute="trailing" constant="16" id="fly-Lx-tkX"/>
                 <constraint firstItem="uKQ-yt-JFN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="i7b-vP-gY9"/>
                 <constraint firstItem="tJk-Zz-7MW" firstAttribute="top" secondItem="Ayo-Vw-gMx" secondAttribute="bottom" constant="8" id="j47-MT-PSg"/>
                 <constraint firstItem="gnM-WZ-Mk4" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="j9T-d6-hrk"/>
                 <constraint firstItem="Ayo-Vw-gMx" firstAttribute="top" secondItem="CTL-1R-cDE" secondAttribute="bottom" constant="20" id="o66-E0-Uua"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NwW-0d-WHZ" secondAttribute="trailing" constant="16" id="qqL-9r-kpz"/>
+                <constraint firstItem="NwW-0d-WHZ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="rAP-ax-ksz"/>
                 <constraint firstItem="tJk-Zz-7MW" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="raD-wh-Osl"/>
                 <constraint firstItem="CTL-1R-cDE" firstAttribute="width" secondItem="zSC-6c-MuR" secondAttribute="width" id="uQD-HE-2DR"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="tJk-Zz-7MW" secondAttribute="trailing" constant="16" id="x0h-5C-MeG"/>
